--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar__logo">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img class="nav-logo" src="./img/assets/LOGO.png" alt="">
             </a>
         </div>
@@ -146,109 +146,162 @@
                 </div>
             </div>
         </div>
-        </article>
-        <div class="sponsor" id="sponsor">
-            <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
-            <div class="sponsor--section">
-                <section lang="pt-br" class="sponsor-texto">
-                    <h3>Junte-se a nós para construir este evento!</h3>
-                    <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
-                    <section class="c4p">
-                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
-                            target="_blank" class="btn-c4p">
-                            Baixar o PDF
-                        </a>
-                    </section>
-                </section>
+        <div class="intro" id="intro">
 
-                <section lang="en-us" class="sponsor-texto">
-                    <h3>Become a sponsor of Python Nordeste</h3>
-                    <p>Check out our Sponsorship Plan!</p>
-                    <section class="c4p">
-                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank"
-                            class="btn-c4p">
-                            Download PDF file
-                        </a>
-                    </section>
-                </section>
-            </div>
-        </div>
+            <div class="intro__wrapper">
+                <h2 class="intro__headline">Objetivos da #PyNE2023</h2>
+                <div class="intro__container">
+                    <div class="intro__descritpion">
+                        <p>
+                            A Python Nordeste (PyNE) é um evento de tecnologia realizado anualmente desde 2013. O evento
+                            é construído de forma colaborativa e voluntária pela comunidade nordestina de amantes da
+                            linguagem de programação Python e em 2023 chegaremos a nossa 11ª edição! <3 </p>
+                                <p>
+                                    Durante 3 dias de imersão os participantes poderão aprender sobre novas tecnologias,
+                                    compartilhar conhecimento e experiências, ter contato com grandes nomes da
+                                    comunidade
+                                    internacional e confraternizar. Tudo isso em um ambiente amistoso, de boa
+                                    convivência,
+                                    inclusivo e livre de intimidação, onde todas as pessoas são bem-vindas.
+                                </p>
+                                <p>
+                                    <b> Os objetivos do evento são:</b>
+                                </p>
+                                <ol>
+                                    <li>
+                                        <p>
 
-        <article class="sponsors-list">
-            <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
-            <h4>Ouro</h4>
-            <div class="sponsors-list__ouro">
-                <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
-                        alt="Elastic" /></a>
-            </div>
-            <h4>Bronze</h4>
-            <div class="sponsors-list__bronze">
-                <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png"
-                        alt="Globo" /></a>
-                <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
-                        alt="Vinta" /></a>
-            </div>
-            <div class="sponsors-list__apoiadores">
-                <h4>Apoiadores</h4>
-                <div class="sponsors-flex">
-                    <a href="https://www.eng.ufba.br/" class="sponsors-flex"><img src="./img/assets/ufba.png"
-                            alt="UFBA" /></a>
-                    <a href="https://www.instagram.com/cienciadedadosnaep/" class="sponsors-flex"><img
-                            src="./img/assets/naep.png" alt="NAEP" /></a>
-                    <a href="https://gamma-ufba.github.io/index.html" class="sponsors-flex"><img
-                            src="./img/assets/gamma-ufba.png" alt="GAMMA"></a>
-                </div>
-            </div>
-        </article>
-        <article class="localizacao">
-            <section class="localizacao--texto">
-                <h2>Confira o local do evento</h2>
-                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) -
-                    Salvador
-                </p>
-                <br>
-                <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
-            </section>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
-                width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </article>
-        <footer>
-            <div class="footer__social">
+                                            1- Difundir a linguagem Python para todos os níveis de conhecimento
+                                            (iniciante,
+                                            intermediário e
+                                            avançado);
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>
 
-                <div class="social-media" id="social-media">
-                    <div class="social-media__list">
-                        <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
-                            <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
-                            <!-- nordeste@python.org.br -->
-                        </a>
-                        <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
-                            <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
-                        </a>
-                        <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                            <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
-                        </a>
-                        <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                            rel="noopener noreferrer">
-                            <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
-                        </a>
+                                            2- Promover a troca de conhecimento entre todas as pessoas participantes de
+                                            forma
+                                            respeitosa e
+                                            construtiva;
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <p>
 
-                    </div>
-                    <div class="footer__footnote">
-                        <a class="footer__footnote" href="mailto:nordeste@python.org.br">
-                            <p>nordeste@python.org.br</p>
-                        </a>
-                        <hr>
-                        <small class="footer__note">
-                            22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 por pythonistas
-                                nordestinos </small>
+                                            3- Incentivar o crescimento da comunidade, tanto em participantes quanto em
+                                            impacto
+                                            social;
+                                            Fomentar a circulação da economia na cidade sede do evento.
+                                        </p>
+                                    </li>
+                                </ol>
                     </div>
                 </div>
             </div>
-        </footer>
-        <script src="https://unpkg.com/htmlincludejs"></script>
-        <script src="script.js"></script>
+            <div class="sponsor" id="sponsor">
+                <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
+                <div class="sponsor--section">
+                    <section lang="pt-br" class="sponsor-texto">
+                        <h3>Junte-se a nós para construir este evento!</h3>
+                        <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
+                        <section class="c4p">
+                            <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
+                                target="_blank" class="btn-c4p">
+                                Baixar o PDF
+                            </a>
+                        </section>
+                    </section>
+
+                    <section lang="en-us" class="sponsor-texto">
+                        <h3>Become a sponsor of Python Nordeste</h3>
+                        <p>Check out our Sponsorship Plan!</p>
+                        <section class="c4p">
+                            <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view"
+                                target="_blank" class="btn-c4p">
+                                Download PDF file
+                            </a>
+                        </section>
+                    </section>
+                </div>
+            </div>
+
+            <article class="sponsors-list">
+                <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
+                <h4>Ouro</h4>
+                <div class="sponsors-list__ouro">
+                    <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
+                            alt="Elastic" /></a>
+                </div>
+                <h4>Bronze</h4>
+                <div class="sponsors-list__bronze">
+                    <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png"
+                            alt="Globo" /></a>
+                    <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
+                            alt="Vinta" /></a>
+                </div>
+                <div class="sponsors-list__apoiadores">
+                    <h4>Apoiadores</h4>
+                    <div class="sponsors-flex">
+                        <a href="https://www.eng.ufba.br/" class="sponsors-flex"><img src="./img/assets/ufba.png"
+                                alt="UFBA" /></a>
+                        <a href="https://www.instagram.com/cienciadedadosnaep/" class="sponsors-flex"><img
+                                src="./img/assets/naep.png" alt="NAEP" /></a>
+                        <a href="https://gamma-ufba.github.io/index.html" class="sponsors-flex"><img
+                                src="./img/assets/gamma-ufba.png" alt="GAMMA"></a>
+                    </div>
+                </div>
+            </article>
+            <article class="localizacao">
+                <section class="localizacao--texto">
+                    <h2>Confira o local do evento</h2>
+                    <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) -
+                        Salvador
+                    </p>
+                    <br>
+                    <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
+                </section>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
+                    width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
+                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </article>
+            <footer>
+                <div class="footer__social">
+
+                    <div class="social-media" id="social-media">
+                        <div class="social-media__list">
+                            <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                                <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
+                                <!-- nordeste@python.org.br -->
+                            </a>
+                            <a href="https://www.instagram.com/pythonnordeste/" target="_blank"
+                                rel="noopener noreferrer">
+                                <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
+                            </a>
+                            <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                                <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
+                            </a>
+                            <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                                rel="noopener noreferrer">
+                                <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
+                            </a>
+
+                        </div>
+                        <div class="footer__footnote">
+                            <a class="footer__footnote" href="mailto:nordeste@python.org.br">
+                                <p>nordeste@python.org.br</p>
+                            </a>
+                            <hr>
+                            <small class="footer__note">
+                                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 por pythonistas
+                                    nordestinos </small>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+            <script src="https://unpkg.com/htmlincludejs"></script>
+            <script src="script.js"></script>
 
 </body>
 
