fix: inserting the carousel direcly into code

--- a/index.html
+++ b/index.html
@@ -109,7 +109,33 @@
         <div class="intro__wrapper">
             <h2 class="intro__headline">Conheça mais sobre Salvador!</h2>
 
-            <include src="carousel.html" frameborder="0"></include>
+            <link rel="stylesheet" href="./css/carousel.css">
+            <section class="carousel" aria-label="Gallery">
+                <ol class="carousel__viewport">
+                    <li id="carousel__slide1" tabindex="0" class="carousel__slide">
+                        <div class="carousel__snapper">
+                            <a href="#carousel__slide4" class="carousel__prev">Go to last slide</a>
+                            <a href="#carousel__slide2" class="carousel__next">Go to next slide</a>
+                        </div>
+                    </li>
+                    <li id="carousel__slide2" tabindex="0" class="carousel__slide">
+                        <div class="carousel__snapper"></div>
+                        <a href="#carousel__slide1" class="carousel__prev">Go to previous slide</a>
+                        <a href="#carousel__slide3" class="carousel__next">Go to next slide</a>
+                    </li>
+                    <li id="carousel__slide3" tabindex="0" class="carousel__slide">
+                        <div class="carousel__snapper"></div>
+                        <a href="#carousel__slide2" class="carousel__prev">Go to previous slide</a>
+                        <a href="#carousel__slide4" class="carousel__next">Go to next slide</a>
+                    </li>
+                    <li id="carousel__slide4" tabindex="0" class="carousel__slide">
+                        <div class="carousel__snapper"></div>
+                        <a href="#carousel__slide3" class="carousel__prev">Go to previous slide</a>
+                        <a href="#carousel__slide1" class="carousel__next">Go to first slide</a>
+                    </li>
+                </ol>
+            </section>
+
             <div class="intro__container">
                 <div class="intro__descritpion">
                     <p>
@@ -302,7 +328,6 @@
                     </div>
                 </div>
             </footer>
-            <script src="https://unpkg.com/htmlincludejs"></script>
             <script src="script.js"></script>
 
 </body>
