feat: adicionando logos

--- a/index.html
+++ b/index.html
@@ -251,6 +251,15 @@
                                 src="./img/assets/naep.png" alt="NAEP" /></a>
                         <a href="https://gamma-ufba.github.io/index.html" class="sponsors-flex"><img
                                 src="./img/assets/gamma-ufba.png" alt="GAMMA"></a>
+                        <a href="https://www.python.org/psf-landing/" class="sponsors-flex"><img
+                                src="./img/assets/psf-logo.png" alt="Python Software Foundation"></a>
+                    </div>
+                </div>
+                <div class="sponsors-list__fornecedores">
+                    <h4>Fornecedores</h4>
+                    <div class="sponsors-flex">
+                        <a href="https://www.instagram.com/cozinhadengodevo/" class="sponsors-flex"><img
+                                src="./img/assets/dengo_de_vo.png" alt="Dengo de Vó" /></a>
                     </div>
                 </div>
             </article>
