feat: adicionando a logo da Jusbrasil

--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
                             alt="Globo" /></a>
                     <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
                             alt="Vinta" /></a>
+                    <a href="https://sobre.jusbrasil.com.br/" class="sponsor-list"><img
+                            src="./img/assets/jusbrasil_rescaled.png" alt="Jusbrasil" /></a>
                 </div>
                 <div class="sponsors-list--apoiadores">
                     <h4 class="sponsors-list__heading--apoiadores">Apoiadores</h4>
